[gd_scene load_steps=3 format=3 uid="uid://dxx4ki7lbx727"]

[ext_resource type="Texture2D" uid="uid://n17h4nsnkp1o" path="res://sprites/shop.png" id="1_1j263"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_klkhb"]

[node name="MainMenu_UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_klkhb")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.509804)
position = Vector2(964, 538)
texture = ExtResource("1_1j263")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -50.5
offset_right = 48.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="btnStartGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="btnToggleFullScreen" type="Button" parent="VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Toggle Fullscreen"

[node name="btnQuit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/btnStartGame" to="." method="_on_btn_start_game_pressed"]
[connection signal="toggled" from="VBoxContainer/btnToggleFullScreen" to="." method="_on_btn_toggle_full_screen_toggled"]
[connection signal="pressed" from="VBoxContainer/btnQuit" to="." method="_on_btn_quit_pressed"]
